[gd_scene load_steps=12 format=2]

[ext_resource path="res://EndGameGUI/Button.png" type="Texture" id=1]
[ext_resource path="res://EndGameGUI/win_tree.png" type="Texture" id=2]
[ext_resource path="res://EndGameGUI/EndGameGUI.gd" type="Script" id=3]
[ext_resource path="res://Common/Size100Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://EndGameGUI/lose_vine.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.333333 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.122905, 0.759777, 1 )
colors = PoolColorArray( 0.941176, 0.890196, 0.211765, 0.611765, 0.94742, 0.901851, 0.295432, 0.546829, 0.994307, 0.989372, 0.923709, 0.0592107, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 256

[sub_resource type="Animation" id=2]
resource_name = "LeftWin"
tracks/0/type = "value"
tracks/0/path = NodePath("WinTree:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.406126, 2.82843 ),
"update": 0,
"values": [ Vector2( 248, 1368 ), Vector2( 248, 544 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LoseTree:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.406, 1 ),
"update": 0,
"values": [ Vector2( 1640, 1224 ), Vector2( 1640, 544 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "RightWin"
tracks/0/type = "value"
tracks/0/path = NodePath("LoseTree:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.406, 1 ),
"update": 0,
"values": [ Vector2( 248, 1202 ), Vector2( 248, 544 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinTree:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.406, 1 ),
"update": 0,
"values": [ Vector2( 1640, 1360 ), Vector2( 1640, 544 ) ]
}

[node name="EndGameGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )

[node name="WinGradient" type="TextureRect" parent="."]
margin_right = 1925.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 960, 540 )
texture = SubResource( 6 )
expand = true

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -378.5
margin_top = -273.0
margin_right = 378.5
margin_bottom = -155.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Placeholder"
align = 1
valign = 1

[node name="PlayAgainButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -22.0
margin_right = 452.0
margin_bottom = 196.0
texture_normal = ExtResource( 1 )

[node name="PlayAgainLabel" type="Label" parent="PlayAgainButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -59.0
margin_right = 20.0
margin_bottom = 59.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Play Again"

[node name="LoseTree" type="Sprite" parent="."]
position = Vector2( 1640, 1224 )
texture = ExtResource( 7 )

[node name="WinTree" type="Sprite" parent="."]
position = Vector2( 248, 1368 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LeftWin = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/RightWin = SubResource( 4 )

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgain_pressed"]
